--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -3,6 +3,8 @@
 \chapter*[Acknowledgements]{Acknowledgements}
 
 I would like to thank the two supervisors of this thesis, Katharina Hartmann and Pavel Caha, for their support, advice and inspiration.
+Katharina, I want to thank you for giving me the space and trust to find my own path.
+Pavel, I am grateful for the many discussions we had, especially those Friday mornings at 9 on Skype.
 
 My thanks also go to all principle researchers of the Research Training Group `Nominal Modification' for their advice and comments on my work:
 Angela Grimm,
@@ -25,7 +27,7 @@ Peter Smith,
 Petra Schulz and
 Sven Grawunder.
 
-I also thank my colleagues from the Research Training Group for sharing their ideas and experiences:
+I also thank my colleagues from the Research Training Group for sharing their ideas, experiences and feedback:
 Abigail Anne Bimpeh,
 Ahmad Al-Bitar,
 Astrid Gößwein,
@@ -46,10 +48,10 @@ Derya Nuhbalaoglu,
 Heidi Klockmann and
 Zheng Shen,
 for their time and advice.
+The same thanks goes to my colleagues from the Syntax department:
+Anke Himmelreich and Johannes Mursell.
 Not only did I enjoy your company as colleagues, I am also grateful that I can call some of you now good friends.
 Because of you I had a wonderful time in Frankfurt in and other places on the planet.
-
-Anke and Johannes
 
 During my three years as a PhD-student I was lucky enough to get the opportunity to visit the University of Pennsylvania in Philadelphia and the Masaryk University in Brno (twice). Thank you for giving me the chance to come and for the inspiration and ideas I got during my stays.
 I presented my work at
@@ -75,14 +77,11 @@ Pavel Caha.
 
 To Peter Smith and Beata Moskal,
 thank you for the warm welcome when I first arrived in Frankfurt and for the continuous support until the day I handed in this dissertation.
-Pete, also thank you for your advice (linguistic and non-linguistic) and calming words in your role as my supervisor.
+Pete, also thank you for your advice (linguistic and non-linguistic) and calming words in your role as my supervisor. Jan Don, dankjewel voor de aanmoediging om voor de positie in Frankfurt te solliciteren en voor het noemen van mijn naam, wat er steeds weer voor zorgt dat er deuren voor me open gaan.
 
-Jan Don, thanks for your encouragement to apply for the position in Frankfurt and for mentioning my name, which continues to open new doors for me.
-
-To my family and friends in The Netherlands, bedankt dat jullie me niet zijn vergeten en dat jullie me zijn komen opzoeken in Frankfurt en Offenbach om me aan te moedigen en af te leiden.
-
+Aan mijn familie en vrienden in Nederland, bedankt dat jullie me niet zijn vergeten en dat jullie me zijn komen opzoeken in Frankfurt en Offenbach, om me aan te moedigen en af te leiden.
 Heit en mem, dankewol dat jim my oanmoedige hawwe om myn eigen paad te gean en dankewol foar jim support ûnderweis.
 
-Jan, danke dass du für mich gesorgt hast in meinen Intensivschreibphasen,
-dass du mir zugehört hast als ich wieder meine wirren Gedanken mit dir geteilt habe,
-und dass wir zusammen nach Holland gezogen sind.
+Lieber Jan, Danke für deine Geduld mit mir, für deine Unterstützung und dass du immer den Laden am Laufen hältst, sodass ich meine Dissertation fertig schreiben konnte.
+Leave lytse Malte, ek troch dy hat it publisearjen fan myn proefskrift sa lang duorre. Ik kin my gjin bettere reden foarstelle.
+
