--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Languages with case competition}\label{ch:typology}
+\chapter[Languages with case competition]{Languages with case competition\protect\footnote{A shortened and modified version of this chapter has been published in \citealt{bergsma2023}.}}\label{ch:typology}
 
 In this dissertation I discuss two aspects of case competition in headless relatives. The first aspect was the topic of Part \ref{part:case-facts} of the dissertation. It concerns which case wins the case competition. This is determined by the same case scale for all languages, repeated in \ref{ex:case-scale-two-patterns}.
 
@@ -27,7 +27,7 @@ Metaphorically, the second aspect can be described as a language-specific approv
 
 Taking this all together, there are four possible patterns. First, the internal case and the external case are allowed to surface. Second, only the internal case is allowed to surface, and the external case is not. Third, only the external case is allowed to surface, and the internal case is not. Fourth, neither the internal case nor the external case is allowed to surface when either of them wins the competition. In what follows, I introduce these four possible patterns.
 
-The first possible pattern is that of a language that allows the internal case and the external case to surface when either of them wins the case competition. I call this the unrestricted type of language \citep[just as cf.][]{grosu1987,cinqueforthcoming}: the internal and external case do not need to match. The pattern might look familiar, because it is the one that Gothic has, which I discussed in Chapter \ref{ch:recurring}.
+The first possible pattern is that of a language that allows the internal case and the external case to surface when either of them wins the case competition. I call this the unrestricted type of language \citep[just as cf.][]{grosu1987,cinque2020}: the internal and external case do not need to match. The pattern might look familiar, because it is the one that Gothic has, which I discussed in Chapter \ref{ch:recurring}.
 Table \ref{tbl:case-competition-int-ext} (repeated from Table \ref{tbl:summary-gothic-simple}) illustrates what the pattern for such a language looks like.
 
 \begin{table}[H]
@@ -322,7 +322,7 @@ Examples in which the internal case is accusative, the external case is nominati
 `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc}
 
 Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal nominative case competes against the external accusative case.
-The internal case is nominative, as the predicate \tit{gisizzen} `possess' takes nominative subjects.
+The internal case is nominative, as the predicate \tit{chisitzen} `possess' takes nominative subjects.
 The external case is accusative, as the predicate \tit{bibringan} `create' takes accusative objects.
 The relative pronoun \tit{dhen} `\ac{rp}.\ac{sg}.\ac{m}.\ac{acc}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just as the main clause, showing that the relative pronoun patterns with the main clause.
 At the end of this section I discuss a counterexample to the case scale, in which the internal case is nominative, the external case is accusative, and the relative pronoun appears in the nominative case.
@@ -511,7 +511,7 @@ Note that the two languages of the unrestricted type that I discuss are both ext
 
 %there is variation, see vogel 2011 on exceptions. sometimes modern german seems to be like polish, sometimes like itself and sometimes like gothic. (1) in case of polish: do these headless relatives maybe have a definite interprettaion, and the light head is not r but der? then it cannot be deleted! (2) in case of modern german: it is really wen - r, (3) there is a syncretism between acc and dat (object case, brandenburg) or between nom and acc (see also was already being a syncretism), so that's why this is all allowed. the nom-dat incompatibility corroborates this hypothesis
 
-This section discusses the situation in which only the internal case is allowed to surface when it wins the case competition. When the internal case wins the case competition, the result is ungrammatical. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-only-int-repeated}.
+This section discusses the situation in which only the internal case is allowed to surface when it wins the case competition. When the external case wins the case competition, the result is ungrammatical. I repeat the pattern from Section \ref{sec:possible-patterns} in Table \ref{tbl:case-competition-only-int-repeated}.
 
 \begin{table}[H]
   \center
@@ -879,7 +879,7 @@ like.1\tsc{sg}\scsub{[ela]} \ac{rp}.\ac{inan}.\ac{ptv} 2\tsc{sg} choose.2\tsc{sg
 `I like what you choose.' \flushfill{Finnish, adapted from \pgcitealt{bresnan1978}{373} after \citealt{carlson1977}}\label{ex:fin-part-ela-part}
 
 I leave it for future research to find out whether other case combinations in Finnish show the same pattern.
-}
+\label{ftn:finnish}}
 
 \section{The external-only type of language}\label{sec:pattern-iii}
 
@@ -924,7 +924,7 @@ I start with an example in which a more complex external case wins the case comp
 Consider the example in \ref{ex:ag-dat-acc}. In this example, the internal accusative case competes against the external dative case.
 The internal case is accusative, as the predicate \tit{tíktō} `give birth to' takes accusative objects.
 The external case is dative, as the predicate \tit{ékhō} `provide' takes dative indirect objects.
-The relative pronoun \tit{hō̃ͅ} `\ac{rp}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is not marked in bold, unlike as the relative clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{hō̃ͅ} `\ac{rp}.\ac{sg}.\ac{m}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, unlike as the relative clause, showing that the relative pronoun patterns with the main clause.
 
 \exg. pãn {tò tekòn} trophḕn ékhei hō̃ͅ \tbf{án} \tbf{tékēͅ}\\
 any parent.\ac{sg}.\ac{nom} food.\ac{sg}.\ac{acc} provide.\ac{pres}.3\ac{sg}\scsub{[dat]} \ac{rp}.\ac{sg}.\ac{m}.\ac{dat} \ac{mod} {gives birth}.\ac{aor}.3\ac{sg}\scsub{[acc]}\\
@@ -1298,17 +1298,17 @@ Figure \ref{fig:attested-headless-relatives-case-competition} shows a diagram th
       {allow \tsc{int}}; %ϕ+\tsc{k} portmanteau?
           \node (outcome2) [outcome, below of=question2, xshift=-2cm, yshift=-0.5cm]
           {matching};
-              \node (example2) [example, below of=outcome2]
+              \node (example2) [example, below of=outcome2, yshift=0.5cm]
               {e.g. Polish\\\phantom{x}\\\phantom{x}};
           \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-1cm]
           {allow \tsc{ext}}; %\tsc{lh}-\tsc{rp} syncretism?
               \node (outcome3) [outcome, below of=question3, xshift=-2cm, yshift=-0.5cm]
               {internal-only};
-                  \node (example3) [example, below of=outcome3]
+                  \node (example3) [example, below of=outcome3, yshift=0.5cm]
                   {e.g. Modern German\\\phantom{x}};
               \node (outcome4) [outcome, below of=question3, xshift=2cm, yshift=-0.5cm]
               {unrestricted};
-                  \node (example4) [example, below of=outcome4]
+                  \node (example4) [example, below of=outcome4, yshift=0.5cm]
                   {e.g. Gothic, Old High German, Classical Greek};
 
     \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
