--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -7,13 +7,11 @@ This theory seeks to capture that headless relatives crosslinguistically adhere 
 
 In most existing accounts for case competition in headless relatives (\citealt[cf.][]{pittner1995,vogel2001,grosu2003,harbert1978}, an exception to this is \citealt{himmelreich2017}) the case scale is stipulated. Headless relatives are said to simply obey to that scale. \pgcitet{pittner1995}{fn.4} makes this explicit: ``One of the reviewers notes that an explanation in terms of a Case hierarchy is rather stipulative. However, as far as I know, nobody has suggested a nonstipulative explanation for these facts.''
 
-In the previous chapter I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} is not specific to headless relatives, but it is a wide-spread phenomenon: it can also be observed in morphology (and in syntax).
+In the previous chapter I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} is not specific to headless relatives, but it is a wide-spread phenomenon: it can also be observed in morphology (and in syntax). Within morphology it appears in syncretism patterns and morphological case containment. \pgcitet{pittner1995}{201:fn.4} makes this link to morphology as well: ``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.''
 
-Within morphology it appears in syncretism patterns and morphological case containment. \pgcitet{pittner1995}{201:fn.4} makes this link to morphology as well: ``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.''
-
-As I already eluded to in the summary of Chapter \ref{ch:introduction}, I am not after a theory in which the case scale is something construction-specific, or one in which syntax and morphology both have their own case scale. Instead, argue that there is a single trigger that is responsible for the case scales in different subparts of language (which is identical to what \citealt{caha2019} suggests for case competition in numeral phrases). Specifically, I show that the observed case scale naturally follows on the assumption that the case scale is deeply anchored in syntax. The case scales in morphology and syntax are merely reflexes of how case is organized in the linguistic system.\footnote{
+As I already eluded to in the summary of Chapter \ref{ch:introduction}, I am not after a theory in which the case scale is something construction-specific, or one in which syntax and morphology both have their own case scale. Instead, argue that there is a single trigger that is responsible for the case scales in different subparts of language (which is identical to what \citealt{caha2019} suggests for case competition in numeral phrases). I show that the observed case scale naturally follows on the assumption that the case scale is deeply anchored in syntax. The case scales in morphology and syntax are merely reflexes of how case is organized in the linguistic system.\footnote{
 \citet{himmelreich2017} works this intuition out in a different way.
-}
+} Specifically, the idea is that a case wins the competition if it contains all features the losing case has.
 
 This chapter is structured as follows. First, I introduce a specific cumulative case decomposition \citep{caha2009}. In the two following sections, I show how this case decomposition is able to derive the syncretism and morphological case containment facts from Chapter \ref{ch:recurring}. I make this concrete in the framework Nanosyntax \citep{starke2009}. Finally, I show how the case decomposition relates to the winner in case competition in headless relatives.
 
@@ -67,7 +65,7 @@ Table \ref{tbl:syncretisms-derive} shows that if one orders cases in the linear 
 The syncretism facts follow in a system in which the case is decomposed as in Table \ref{tbl:case-decomposed} and in which lexicalization relies on containment. The latter means that a phonological form is not only inserted when the lexical specification is identical to the syntax, but also when the syntactic features are a subset of the lexical specification. The intuition is the following. Syncretic forms are realized by a single `lexical entry' from the `lexicon'. I elaborate on the terms lexical entry and lexicon shortly.
 A lexical entry can be applied if it contains all features, as long as there is no more specific one. This system can generate the patterns ABC, AAA, ABB and AAB, but not ABA.
 
-Before I show how the four attested patterns can be derived (and the unattested one cannot), I need to make some theoretical assumptions explicit about Nanosyntax, the framework in which this dissertation is worked out. First, I show how the Nanosyntactic system is set up in such a way that morphological patterns (like syncretism, but also morphological containment) can inform us about the way syntax is structured. Therefore, I briefly discuss the general architecture of Nanosyntax, its postsyntactic lexicon, and the content and shape of lexical entries. Lastly, I discuss how multiple features (like \tsc{k}1, \tsc{k}2 and \tsc{k}3 from Table \ref{tbl:case-decomposed}) can be spelled out by a single phonological element using phrasal spellout.
+Before I show how the four attested patterns can be derived (and the unattested one cannot), I need to make some theoretical assumptions explicit about Nanosyntax, the framework in which this dissertation is worked out. First, I show how the Nanosyntactic system is set up in such a way that morphological patterns (like syncretism, but also morphological containment) can inform us about the way syntax is structured. Therefore, I briefly discuss the general architecture of Nanosyntax, its postsyntactic lexicon, and the content and shape of lexical entries (see \citealt{baunaz2018} for an introduction to Nanosyntax, \citealt{caha2020} for a description of key features of Nanosyntax and a comparison to Distributed Morphology, and \citealt{caha2021a} for differences concerning the lexicon in Nanosyntax and standard minimalism). Lastly, I discuss how multiple features (like \tsc{k}1, \tsc{k}2 and \tsc{k}3 from Table \ref{tbl:case-decomposed}) can be spelled out by a single phonological element using phrasal spellout.
 
 In Nanosyntax, syntax starts with atomic features, and it builds complex syntactic trees. Specifically, there are no `feature bundles' (from a pre-syntactic lexicon) that enter the syntax. The only way complex feature structures come to exist is a result of merge.
 After syntax (actually, each instance of merge), the syntactic structure is matched against the lexicon for pronunciation. The lexicon `translates' between lexical trees (i.e. syntactic representations) on the one hand and phonology (PF) and concepts (CF) on the other hand.\footnote{
@@ -866,7 +864,7 @@ I repeat the lexical entries for \tit{sie} and \tit{ihr} in \ref{ex:german-lexic
 \label{ex:german-ihr-lexicon-acc}
 
 The former, \ref{ex:german-sie-lexicon-acc}, has one no unused features. The latter, \ref{ex:german-ihr-lexicon-acc}, has one unused feature: \tsc{k}3.
-Because \ref{ex:german-sie-lexicon-acc} has fewer unused features, it wins the competition, and the syntactic structure is spelled out as \tit{sie}. This is shown in \ref{ex:german-sie-spellout-acc}
+Because \ref{ex:german-sie-lexicon-acc} has fewer unused features, it wins the competition, and the syntactic structure is spelled out as \tit{sie}. This is shown in \ref{ex:german-sie-spellout-acc}.
 
 \ex. \begin{forest} boom
 [\ac{acc}P,
@@ -987,7 +985,7 @@ The intuition is the following. The morphological form of the pronouns mirrors t
 
 Before I show how languages with morphological case containment can be derived, I need to discuss how variation between languages is modeled in Nanosyntax. Crosslinguistic variation is namely explained in terms of differences in the lexicon. In other words, the syntactic structure is identical across languages, but the lexical entries package features together differently.
 
-Let me discuss the differences between synthetic and agglutinative morphology to make this more concrete. Take the accusative, which contains \tsc{k}1 and \tsc{k}2 in all languages. The languages discussed in the previous section, Section \ref{sec:syncretism}, are all synthetic languages. \tsc{k}2 can only be spelled out in a single lexical entry together with \tsc{k}1. The result is that the examples are syncretic (i.e. formally identical) or suppletive (i.e. formally unrelated). The language I discuss in this section is agglutinative. \tsc{k}2 is not spelled out in the same lexical entry with \tsc{k}1. Instead, the \tsc{k}2 is spelled out by its own lexical entry. The result is that the accusative formally contains the nominative.
+Let me discuss the differences between fusional and agglutinative morphology to make this more concrete. Take the accusative, which contains \tsc{k}1 and \tsc{k}2 in all languages. The languages discussed in the previous section, Section \ref{sec:syncretism}, are all fusional languages. \tsc{k}2 can only be spelled out in a single lexical entry together with \tsc{k}1. The result is that the examples are syncretic (i.e. formally identical) or suppletive (i.e. formally unrelated). The language I discuss in this section is agglutinative. \tsc{k}2 is not spelled out in the same lexical entry with \tsc{k}1. Instead, the \tsc{k}2 is spelled out by its own lexical entry. The result is that the accusative formally contains the nominative.
 
 Let me illustrate this by deriving the 3\ac{sg} paradigm in Khanty.
 First, I give the lexical entry for the nominative third person singular. It contains pronominal features and the feature \tsc{k}1. The phonological form associated with the structure is \tit{luw}. The lexical entry is given in \ref{ex:khanty-luw-lexicon}.
@@ -1032,7 +1030,7 @@ Accordingly, I give the lexical entry for the accusative marker \tit{e:l} in \re
 
 Note that it is crucial here to have a theory in which the features that form an accusative contain the features that form a nominative. If not, it would be a surprise that the nominative form is contained in the accusative form. The same holds for the accusative and dative.
 
-\tit{Luw-e:l} consists of two morphemes that both correspond to their own piece of syntactic structure: \tit{luw} and \tit{e:l}. But how do these two morphemes combine? This issue brings me to another detour into the Nanosyntactic theory, which is about spellout-driven movement.
+\tit{Luw-e:l} consists of two morphemes that both correspond to their own piece of syntactic structure: \tit{luw} and \tit{e:l}. But how do these two morphemes combine? This issue brings me to another detour into the Nanosyntactic theory, which is about spellout-driven movement \citep{starke2018,caha2019b,vandenwyngaerd2020}.
 
 As discussed in the previous section, spellout in Nanosyntax only targets constituents. That means that it is impossible to let \ac{acc}P spell out as \tit{e:l} while it contains \ac{nom}P.\footnote{
 Notice that this also gives the incorrect order of the morphemes: \tit{e:l-luw} instead of \tit{luw-e:l}.
@@ -1041,7 +1039,7 @@ Notice that this also gives the incorrect order of the morphemes: \tit{e:l-luw} 
 \ex. \begin{forest} boom
 [\ac{acc}P,name=accp, s sep=20mm,
 tikz={
-\node[draw,ellipse,rotate=35,yscale=0.4,
+\node[draw,ellipse,rotate=30,yscale=0.4,
 fit=(acc)(accp),
 label={below left:\tit{e:l}}]{};
 }
@@ -1140,7 +1138,7 @@ Again, because spellout only targets constituents, \tsc{k}3 cannot be spelled ou
 \begin{forest} boom
 [\ac{dat}P,name=datp, s sep=20mm,
 tikz={
-\node[draw,ellipse,rotate=35,yscale=0.4,
+\node[draw,ellipse,rotate=30,yscale=0.4,
 fit=(dat)(datp),
 label={below left:\tit{na}}]{};
 }
