--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -147,7 +147,7 @@ Consider the light head in Figure \ref{fig:rel-lh-mg}.
 Light heads (i.e. phi and case features) in Modern German are spelled out by a single morpheme, indicated by the circle around the structure. They are spelled out as \tit{r}, \tit{n} or \tit{m}, depending on which case they realize.
 Consider the relative pronoun in Figure \ref{fig:rel-lh-mg}.
 Relative pronouns in Modern German consist of two morphemes: the constituent that forms the light head (i.e. phi and case features) and the \tsc{rel}P, again indicated by the circles. The constituent that forms the light head has the same spellout as in the light head (\tit{n} or \tit{m}), and the \tsc{rel}P is spelled out as \tit{we}.\footnote{
-Besides \tit{wer} `who', Modern German also has other relative pronouns, such as \tit{der} `who', \tit{welcher} `which'. I focus on \tit{wer} in this chapter, since it is the relative pronoun used in the headless relatives that I discuss.
+\tit{Wer} `who' is the relative pronoun that Modern German uses in headless relatives. The language also has other relative pronouns, such as \tit{der} `who' \tit{welcher} `which'. In this dissertation, I focus on \tit{wer}, since it is the relative pronoun used in the headless relatives, and I do not discuss how this relative pronoun relates to the other relative pronouns.
 }\footnote{
 The inanimate relative pronoun is \tit{was}. Later on in this section I discuss how the vowel in \tit{we} alternates in different genders.
 }
@@ -305,7 +305,9 @@ For case, I adopt the features of \citet{caha2009}, already introduced in Chapte
 
 Having discussed the number, gender and case features, only the pronominal features remain. Another context in which the final consonants appear (besides their use in relative pronouns and demonstrative pronouns) is as pronouns in colloquial speech.\footnote{
 The singular feminine dative \tit{r} and the plural dative \tit{n} cannot be easily used as pronouns. This can be seen as an indication that it is not purely phonological reduction of the pronouns. Interestingly, the singular feminine dative \tit{r} and the plural dative \tit{n} do not appear in \tsc{wh}-pronouns, as Modern German does not have feminine and plural \tsc{wh}-elements. I do not have an explanation for this observation.
-} In \ref{ex:mg-weak}, I give examples of the masculine accusative singular and masculine dative singular.
+} In \ref{ex:mg-weak}, I give examples of the masculine accusative singular and masculine dative singular.\footnote{
+I constructed the German sentences in this chapter myself. I checked their grammaticality with several native speakers.
+}
 
 \ex.\label{ex:mg-weak}
 \ag. Ich wollt'n gestern schon anrufen.\\
@@ -419,7 +421,7 @@ I actually think that \tit{we} also spells out deixis features. I elaborate on t
 I start with discussing the operator features \tsc{wh} and \tsc{rel}.
 \tsc{wh} is a feature that \tsc{wh}-pronouns, such as \tsc{wh}-relative pronouns and interrogatives, share. The feature triggers the construction of a set of alternatives in the sense of \citet{rooth1985,rooth1992}.
 The feature \tsc{rel} is present to establish a relation.
-I assume that a relation is established with the light head. The semantics of the headless relative a whole is then an individual that has been picked from a set of alternatives \citep[cf.][]{caponigro2003}.
+I assume that a relation is established with the light head. The semantics of the headless relative as a whole is then an individual that has been picked from a set of alternatives \citep[cf.][]{caponigro2003}.
 
 I continue with the last two features that are spelled out by \tit{we}, namely the number feature \# and the gender feature \tsc{an}. Consider again Table \ref{tbl:mg-paradigm-wh-rels-rep}. In the different genders, not only the final consonants differ, but also the vowel. This suggests that \tit{we} also realizes gender features.\footnote{
 In Section \ref{sec:mg-w-er-cv} I discuss an alternative segmentation of \tit{wer}.
@@ -511,7 +513,7 @@ This section takes a small detour to discuss three aspects of Modern German rela
 
 In Section \ref{sec:mg-rel} I noted that I assume that the final consonant of the relative pronoun spells out pronominal features. In this section I show that it should be classified as a weak pronoun.
 
-\citet{cardinaletti1994} split pronouns in three classes: strong pronouns, weak pronouns and clitics. Following the tests in \citet{cardinaletti1994} that distinguish the types from each other, the pronouns in \ref{ex:mg-weak} are neither strong pronouns nor clitics, and therefore, should be classified as weak pronouns.
+\citet{cardinaletti1994} split pronouns in three classes: strong pronouns, weak pronouns and clitics. Following the tests in \citet{cardinaletti1994} that distinguish the types from each other, the pronouns in \ref{ex:mg-weak} are neither strong pronouns nor clitics, and therefore, should be classified as weak pronouns.\footnote{For a different classification on the basis of different German dialects, see \citealt{weiss2015}.}
 
 First, \tit{n} and \tit{m} are not strong pronouns because of how they behave under coordination and under focus.
 Strong pronouns can be coordinated. \tit{n} and \tit{m} cannot be coordinated, as shown in \ref{ex:wk-pron-coord}.
@@ -527,7 +529,7 @@ Strong pronouns can be coordinated. \tit{n} and \tit{m} cannot be coordinated, a
 Strong pronouns can be focused, whereas \tit{n} and \tit{m} cannot be focused.
 
 Second, the consonants are not clitics because clitics cannot combine with prepositions, but \tit{n} and \tit{m} can, as shown in \ref{ex:wk-pron-prep}.\footnote{
-It seems that these examples are not grammatical for all speakers of Modern German. For these speakers, the pronouns are possibly clitics. I come back to this at the end of Chapter \ref{ch:deriving-matching}.
+It seems that these examples are not grammatical for all speakers of Modern German. For these speakers, the pronouns are possibly clitics. I come back to this at the end of Chapter \ref{ch:deriving-matching} and in the discussion in Chapter \ref{ch:discussion}.
 }
 
 \ex.\label{ex:wk-pron-prep}
@@ -551,7 +553,7 @@ I leave the distinction between different classes of pronouns of the main discus
 
 In Section \ref{sec:mg-rel} I mentioned that I assume that relative pronouns also spell out deixis features. In this section I elaborate on this.
 
-In relative pronouns it does not express spatial deixis, but discourse deixis: it establishes a relation with an antecedent.
+Relative pronouns do not express spatial deixis, but discourse deixis: it establishes a relation with an antecedent.
 Generally, three types of deixis are distinguished: proximal, medial and distal. I argue that \tit{e} in the relative pronoun corresponds to the medial. Generally speaking, \tsc{wh}-pronouns combine with the medial or the distal. English has morphological evidence for this claim. Demonstratives in English can combine with either the proximal or this medial/distal, as shown in \ref{ex:english-dem}.
 
 \ex.\label{ex:english-dem}
@@ -631,7 +633,7 @@ The way Nanosyntax combines different morphemes is not by glueing them together 
 Starting from the bottom, these are pronominal feature \tsc{ref}, gender features \tsc{cl} and \tsc{an}, a number feature \#, operator features \tsc{wh} and \tsc{rel} and case features \tsc{k}.
 
 This order is motivated as follows. Pronominal features (\tsc{ref}) are the nominal part of the structure and therefore the bottom-most feature.
-Both \citet{picallo2008} and \citet{kramer2016} argue that number (\#) is hierarchically higher than gender (\tsc{cl} and \tsc{an}). Case (\tsc{k}) is agreed to be higher than number (\#) \citep[cf.][]{bittner1996}.
+Both \citet{picallo2008} and \citet{kramer2016} argue that number (\#) is hierarchically higher than gender (\tsc{cl} and \tsc{an}). Case (\tsc{k}) is agreed to be higher than number (\#) \citep[cf.][]{pittner1996}.
 
 For the position of the operator features (\tsc{wh} and \tsc{rel}) consider \ref{ex:position-operator}.
 
@@ -838,7 +840,7 @@ I reformulate this informally: if none of the preceding spellout options lead to
 
 Now I come back to the `other' features that the feature is merged with to create a phrase that can be spelled out. This cannot be just any feature. What is crucial here again is the functional sequence. The newly merged feature is merged with features that precede it in this sequence.\footnote{
 There are three different proposals on Spec Formation.
-\citet{caha2019} argue that there can only be a single feature overlap between the two phrases.
+\citet{caha2019a} argue that there can only be a single feature overlap between the two phrases.
 \citet{de2018} argue that there cannot be any overlap at all. The features that used in the second workspace are removed from the structure in the main workspace.
 In this dissertation, I work with the proposal in \citet{starke2018}, in which the overlap between the phrase on the left and the phrase on the right can also be more than a single feature. This is the only proposal of the three that allows me to derive all the forms I encounter.
 }
@@ -1284,7 +1286,7 @@ I end up claiming that the phi and case feature portmanteau of the relative pron
 \end{forest}
 
 I give an example of an existing Modern German light-headed relative in \ref{ex:mg-den-wen}.\footnote{
-It seems light-headed relatives with inanimates, as in \ref{ex:mg-das-was}, are judged better than examples with animates \citep[cf.][ftn. 29]{hanink2018}. In turn, examples with different cases, as in \ref{ex:mg-wer-dem}, are judged worse than examples with matching cases, although they are still attested \citep[ftn. 6]{fuss2014}.
+It seems that light-headed relatives with inanimates, as in \ref{ex:mg-das-was}, are judged better than examples with animates \citep[cf.][ftn. 29]{hanink2018}. In turn, examples with different cases, as in \ref{ex:mg-wer-dem}, are judged worse than examples with matching cases, although they are still attested \citep[ftn. 6]{fuss2014}.
 
 \ex.
 \ag. Ich esse das, was ich mag.\\
@@ -1358,8 +1360,8 @@ universal-like  & ✔         & *                   \\
 
 The first interpretation of the headless relative is a definite-like one. This interpretation corresponds to a definite description. Consider the context which facilitates a definite-interpretation and the repeated light-headed relative headed by the demonstrative and headless relative in \ref{ex:mg-context-def}.
 
-\ex.
-\a. Context: Yesterday I met with two friends. I like one of them. The other one I do not like so much.\label{ex:mg-context-def}
+\ex.\label{ex:mg-context-def}
+\a. Context: Yesterday I met with two friends. I like one of them. The other one I do not like so much.
 \bg. Ich umarme den, wen ich mag.\\
 I hug \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} I like\\
 `I hug who I like.'
@@ -1400,7 +1402,7 @@ So far, I established that the light-headed relative headed by the demonstrative
 
 I suggest that the extra light head is the element that is left once the morpheme \tit{de} is absent. This is the morpheme that is the final consonant of the relative pronoun. I give the extra light-headed relative that the headless relative is derived from in \ref{ex:mg-real-base}. The brackets around the light head indicate that it is deleted.
 
-\exg. Ich umarmt [n], wen ich mag.\\
+\exg. Ich umarme [n], wen ich mag.\\
 I hug \tsc{elh}.\tsc{an}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} I like\\
 `I hug who I like.'\label{ex:mg-real-base}
 
@@ -1562,7 +1564,6 @@ In sum, Modern German headless relatives are derived from a light-headed relativ
 
 In this section, I compare the internal syntax of extra light heads to the internal syntax of relative pronouns in Modern German. This is the worked out version of the comparisons in Section \ref{sec:basic-internal}. What is different here is that I show the comparisons for Modern German specifically, and that the content of the internal syntax that is being compared is motivated earlier in this chapter.
 
-I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
 Then I give an example in which the internal dative case is more complex than the external accusative case.
 I end with an example in which the external dative case is more complex than the internal accusative case.
@@ -1576,7 +1577,7 @@ The internal case is accusative, as the predicate \tit{mögen} `to like' takes a
 The external case is accusative as well, as the predicate \tit{einladen} `to invite' also takes accusative objects. The extra light head \tit{n} `\ac{elh}.\ac{an}.\ac{acc}' appears in the accusative case. It is placed between square brackets because it does not surface.
 
 \exg. Ich lade [n] ein, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}.\\
- 1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \tsc{elh}.\ac{an}.\ac{acc} {} \tsc{rp}.\ac{an}.\ac{acc} Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
+ 1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \tsc{elh}.\ac{an}.\ac{acc} {} \tsc{rp}.\ac{an}.\ac{acc} also Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
  `I invite who Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-acc-rep}
 
 In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
@@ -1943,7 +1944,7 @@ I derive this from the internal syntax of light heads and relative pronouns in M
 
 A crucial characteristic of internal-only languages such as Modern German is that they have a portmanteau for phi and case features. Therefore, the light head is structurally contained in the relative pronoun when the internal and the external case match and when the internal case is the more complex one. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 
-When the internal case is the more complex one, neither the light head nor the relative pronoun is structurally contained in the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
+When the external case is the more complex one, neither the light head nor the relative pronoun is structurally contained in the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
 
 It remains an open question why the extra light head cannot surface as the head of a relative clause. A possible answer comes from drawing a parallel between the two possible light heads and two other forms that are morphologically identical to them. These are the strong and weak definite in \citet{schwarz2009}. \posscitet{schwarz2009} strong definite is anaphoric in nature, and the weak definite encodes uniqueness. I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem}, and \tit{dem Freund} `the friend' refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
 
