--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -589,12 +589,13 @@ I place the underlying forms and the surface form of the inanminate relative pro
 The sequence \tit{k-i-i} becomes \tit{czy} in the instrumental, and the sequence \tit{k-i-o} becomes \tit{cze} in the genitive and dative.\footnote{
 Under this analysis, the \tsc{wh}-element \tit{czyj} `whose' is underlyingly \tit{k-i-i-j}.
 }
-To get from the underlying form to the surface form, several phonological processes are taking place, which are all independently observed within Polish. First I discuss the instrumental, in which \tit{k-i-i} becomes \tit{czy}.
+To get from the underlying form to the surface form, several phonological processes are taking place, which are all independently observed within Polish. I go through them one by one. In the discussion I use the orthographic counterparts of the sounds, since the evidence I provide can also be observed in orthography. Below the rules that I introduce I give the IPA symbols to make clear to which sounds the orthography corresponds. First I discuss the instrumental, in which \tit{k-i-i} becomes \tit{czy}.
 
 I start with the combination of \tit{k} and \tit{i} becoming \tit{c}, as shown in \ref{ex:pol-phon-k+i}.
 
 \ex.\label{ex:pol-phon-k+i}
-\tit{k} + \tit{i} → \tit{c}
+\tit{k} + \tit{i} → \tit{c}\\
+/k/ + /i/ → /t͡s/
 
 Consider the paradigm for the singular of \tit{lampa} `light' and the singular of \tit{córka} `daugther' in Table \ref{tbl:pol-jk-to-c}.
 
@@ -623,7 +624,8 @@ There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \t
 I continue with the combination of \tit{c} and \tit{i} becoming \tit{czy}, as shown in \ref{ex:pol-phon-c+i}.
 
 \ex.\label{ex:pol-phon-c+i}
-\a. \tit{c} + \tit{i} → \tit{czy}
+\a. \tit{c} + \tit{i} → \tit{czy}\\
+/t͡s/ + /i/ → /t͡ʂɨ/
 
 This change can be independently observed in \ref{ex:pol-waltz}.
 
@@ -657,16 +659,18 @@ The sequence \tit{k-i-o} changes into \tit{co} in the nominative and accusative.
 I start by looking at the nominative and the accusative. Here only one phonological change seems to take place, which is the combination of \tit{k} and \tit{i} becoming \tit{c}, which I also showed for the instrumental. I repeat it in \ref{ex:pol-phon-k+i-rep}.
 
 \ex.\label{ex:pol-phon-k+i-rep}
-\tit{k} + \tit{i} → \tit{c}
+\tit{k} + \tit{i} → \tit{c}\\
+/k/ + /i/ → /t͡s/
 
 Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{co}.
 
-Now consider the genitive and the dative. If here only the \tit{k} plus \tit{i} becomes \tit{c} change takes place, the result would \tit{c-o-go}/\tit{c-o-mu}, which is incorrect. The sequence \tit{c-o} should somehow still change into \tit{cze}. Now assume that in the genitive and the dative the \tit{i} would have double effect, meaning that it also has an influence on the vowel \tit{o}. Before I discuss how the \tit{i} can sometimes have a double effect and sometimes single effect, I show that the required phonological processes are attested in Polish.
+Now consider the genitive and the dative. If here only the \tit{k} plus \tit{i} becomes \tit{c} change takes place, the result would be \tit{c-o-go}/\tit{c-o-mu}, which is incorrect. The sequence \tit{c-o} should somehow still change into \tit{cze}. Now assume that in the genitive and the dative the \tit{i} would have double effect, meaning that it also has an influence on the vowel \tit{o}. Before I discuss how the \tit{i} can sometimes have a double effect and sometimes single effect, I show that the required phonological processes are attested in Polish.
 
 I start with the combination of \tit{i} and \tit{o} becoming \tit{e}, as shown in \ref{ex:pol-phon-i+o}.
 
 \ex.\label{ex:pol-phon-i+o}
-\tit{i} + \tit{o} → \tit{e}
+\tit{i} + \tit{o} → \tit{e}\\
+/i/ + /o/ → /ɛ/
 
 Consider the paradigm for the singular of \tit{biurko} `desk' and the singular of \tit{słońce} `sun' in Table \ref{tbl:pol-io-to-e}.
 
@@ -696,7 +700,8 @@ Assuming that this change also takes place in the inanimate relative pronoun, th
 I continue with the change in which the combination of \tit{c} and \tit{e} become \tit{cze}, as shown in \ref{ex:pol-phon-ce}.
 
 \ex.\label{ex:pol-phon-ce}
-\tit{c} + \tit{e} → \tit{cze}
+\tit{c} + \tit{e} → \tit{cze}\\
+/t͡s/ + /ɛ/ → /t͡ʂɛ/
 
 I give the example in which the combination of \tit{c} and \tit{e} results in \tit{cze} in \ref{ex:pol-father}.
 
@@ -1359,7 +1364,7 @@ In what follows, I construct the Polish extra light heads. Until the feature \#,
   ]
 \end{forest}
 
-Then, the feature \tsc{k}1 is merged. The feature \tsc{k}1 is merged with the \#P, forming an \tsc{nom}P. This phrase is not contained in any of the Polish lexical entries. The first movement is tried, and the specifier of the \#P, the \tsc{an}P, is moved to the specifier of \tsc{nom}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep-lh}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-nom}.
+Then, the feature \tsc{k}1 is merged. The feature \tsc{k}1 is merged with the \#P, forming a \tsc{nom}P. This phrase is not contained in any of the Polish lexical entries. The first movement is tried, and the specifier of the \#P, the \tsc{an}P, is moved to the specifier of \tsc{nom}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep-lh}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-nom}.
 
 \ex.\label{ex:pol-elh-nom}
 \begin{adjustbox}{max width=0.9\textwidth}
@@ -1483,7 +1488,6 @@ In sum, Polish headless relatives are derived from a light-headed relative heade
 
 In this section, I compare the internal syntax of extra light heads to the internal syntax of relative pronouns in Polish. This is the worked out version of the comparisons in Section \ref{sec:basic-matching}. What is different here is that I show the comparisons for Polish specifically, and that the content of the internal syntax that is being compared is motivated earlier in this chapter.
 
-I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
 Then I give an example in which the internal dative case is more complex than the external accusative case.
 I end with an example in which the external dative case is more complex than the internal accusative case.
@@ -1952,11 +1956,10 @@ This raises the question of whether Polish extra light heads could not be monomo
 
 A parallel between the Polish \tit{go} (and \tit{mu}) and the Modern German \tit{n} (and \tit{m}) is that they both surface as pronouns in their respective languages. However, there is a difference between the Polish \tit{go} and Modern German \tit{n}. The Polish \tit{go} is analyzed as a clitic \citep{swan2002}, whereas the Modern German \tit{n} is analyzed as a weak pronoun (see Section \ref{sec:mg-weak-pronoun}).
 According to \citet{cardinaletti1994}, clitics and weak pronouns differ from each other in that clitics cannot follow prepositions whereas weak pronouns can, and weak pronouns cannot follow dative objects whereas clitics can. Polish \tit{go} and \tit{mu} cannot follow prepositions \pgcitep{swan2002}{157}, whereas Modern German \tit{n} and \tit{m} can (see Section \ref{sec:mg-weak-pronoun}).\footnote{
-As I mentioned in Section \ref{sec:mg-weak-pronoun} not all speakers of Modern German allow the \tit{n} and \tit{m} to follow prepositions. This might suggests that these pronouns are clitics in their grammar, just as in Polish. This raises the question of whether these speakers are also like Polish speakers with the respect to headless relatives, in that they only accept matching cases (which is the version of Modern German described in \citealt{groos1981}).
-I do not investigate this question any further in this thesis.
-I also do not work out an analysis for the variety of Modern German in which \tit{n} and \tit{m} are clitics.
+As I mentioned in Section \ref{sec:mg-weak-pronoun} not all speakers of Modern German allow the \tit{n} and \tit{m} to follow prepositions. This might suggests that these pronouns are clitics in their grammar, just as in Polish. This raises the question of whether these speakers are also like Polish speakers with the respect to headless relatives, in that they only accept matching cases (which is the version of Modern German described in \citealt{groos1981} and variants of German discussed in \citealt{vogel2002,himmelreich2017}).
+I leave it for future research to investigate whether this prediction is borne out.
 }
 Theoretically, clitics lack certain pronominal features (\tsc{ref} and Σ, see Section \ref{sec:mg-weak-pronoun}), which are indeed not spelled out by the clitic in my analysis of Polish, but by \tit{o}.\footnote{
 In my analysis, Polish clitics also lack gender features.
 }
-I assume that the weak pronoun in Polish is \tit{o-go} (which combines with the \tit{i} I introduced in Section \ref{sec:pol-rel} to become a strong pronoun). A question that remains unanswered is why \tit{o-go} does not surface as a weak pronoun.
+I assume that the weak pronoun in Polish is \tit{o-go} (which combines with the \tit{i} I introduced in Section \ref{sec:pol-rel} to become a strong pronoun). A question that remains unanswered is why \tit{o-go} does not surface as a weak pronoun. Admittedly, this is a weak point in this analysis, since the grammaticality of headless relatives is derived solely from the internal structure of relative pronouns and light heads, which in this case cannot be independently observed in the language. 
