--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -488,7 +488,7 @@ These different suffixes can be observed in several contexts besides relative pr
   \ac{dat}  & jung-emu/jung-emo & jung-emu/jung-emo   & jung-eru/jung-ero \\
   \bottomrule
             & \ac{n}.\ac{pl}    & \ac{m}.\ac{pl}      &  \tsc{f}.\ac{pl}   \\
-      \cmidrule{2-4}f
+      \cmidrule{2-4}
   \ac{nom}  & jung-iu           &  jung-e             & jung-o            \\
   \ac{acc}  & jung-iu           &  jung-e             & jung-o            \\
   \ac{dat}  & jung-ēm/jung-ēn   &  jung-ēm/jung-ēn    & jung-ēm/jung-ēn   \\
@@ -499,7 +499,7 @@ These different suffixes can be observed in several contexts besides relative pr
 
 For some forms, the table gives two different forms, the first one being nominal inflection and the second one being pronominal inflection \citep{braune2018}.
 The pronominal endings are the same as can be observed in the Table \ref{tbl:rel-dem-ohg}.
-Note here that the situation in Old High German is slightly different from the one in Modern German, in which adjectives only combine with the final consonant of relative pronouns and demonstratives (compare with Table \ref{tbl:mg-paradigm-wh-rels} and Table \ref{tbl:mg-paradigm-dem} in Chapter \ref{ch:deriving-onlyinternal}).
+Note here that the situation in Old High German is slightly different from the one in Modern German, in which adjectives only combine with the final consonant of relative pronouns and demonstratives (compare with Table \ref{tbl:mg-paradigm-wh-rels} and Table \ref{tbl:mg-paradigm-dem} in Chapter \ref{ch:deriving-onlyinternal}). For this reason, I assume that in Old High German, the vowel is part of the phi and case morpheme, and in Modern German it is not.
 
 Besides gender, number and case features, I assume that the suffix also contains pronominal features. I do not only do so because the suffix is called pronominal inflection (\tit{Pronominalflexion}) in the literature \pgcitep{braune2018}{338}, but also because it appears in other pronominal forms too, such as possessives \pgcitep{braune2018}{337-338}, demonstratives with the \tit{dës}-stem \pgcitep{braune2018}{342} and interrogatives \pgcitep{braune2018}{345}.
 
@@ -1131,7 +1131,7 @@ I show the complete structure that I work towards in this section in \ref{ex:ohg
 
 I give an example of a relative clause headed by a demonstrative in \ref{ex:ohg-lh-rel}.
 The \tit{ther} `\tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}' not marked in bold is the demonstrative that is the head of the relative clause.
-The \tit{Ther} `\tsc{rp}.\tsc{sg}.\tsc{m}.\tsc{nom}' marked in bold is the relative pronoun in the relative clause.\footnote{
+The \tit{ther} `\tsc{rp}.\tsc{sg}.\tsc{m}.\tsc{nom}' marked in bold is the relative pronoun in the relative clause.\footnote{
 I assume that whether both the demonstrative and the relative pronoun or only one of them surfaces is determined by information structure. In \ref{ex:ohg-lh-rel}, it seems plausible that the one that hit Christ is emphasized, and that therefore no deletion takes place.
 }
 
@@ -1532,7 +1532,6 @@ In sum, Old High German headless relatives can be derived from a light-headed re
 
 In this section, I compare the internal syntax of extra light heads and demonstratives to the internal syntax of relative pronouns in Old High German. This is the worked out version of the comparisons in Section \ref{sec:basic-unrestricted}. What is different here is that I show the comparisons for Old High German specifically, and that the content of the internal syntax that is being compared is motivated earlier in this chapter.
 
-I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both nominative. I show that the grammaticality of the example can be derived by either taking the light-headed relative headed by the extra light head or the light-headed relative headed by the demonstrative as the source of the headless relative.
 Then I give an example in which the external accusative case is more complex than the internal nominative case. I show that the grammaticality of this example can only be derived by taking the light-headed relative headed by the demonstrative as the source of the headless relative and not the light-headed relative headed by the extra light head. Before I can properly do that, I take a necessary but brief detour into the larger syntactic structure of headless relatives.
 I end with an example in which the internal accusative case is more complex than the external nominative case. I show that the grammaticality of this example can only be derived by taking the light-headed relative headed by the extra light head as the source of the headless relative and not the light-headed relative headed by the demonstrative.\footnote{
@@ -1659,7 +1658,7 @@ In Figure \ref{fig:ohg-int=ext-lh}, I give the syntactic structure of the demons
               }
                   [\tsc{dem}]
                   [\tsc{rel}P
-                      [\phantom{x}\tit{dh}\phantom{x}, roof]
+                      [\phantom{xxx}, roof]
                   ]
               ]
               [\tsc{nom}P,
@@ -1744,7 +1743,7 @@ In \ref{ex:ohg-acc-nom-elh}, the extra light head \tit{ën} `\tsc{elh}.\ac{sg}.\
 In \ref{ex:ohg-acc-nom-lh}, the demonstrative \tit{dhen} `\tsc{dem}.\ac{sg}.\ac{m}.\ac{acc}' appears in the accusative case. Here the relative pronoun is placed between square brackets because it does not surface.
 
 \ex.\label{ex:ohg-acc-nom-rep}
-\ag. *ih bibringu fona iacobes samin endi fona iuda [en] \tbf{dher} \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
+\ag. ih bibringu fona iacobes samin endi fona iuda [en] \tbf{dher} \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
 1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat} \ac{elh}.\ac{sg}.\ac{m}.\ac{acc} \ac{rp}.\ac{sg}.\ac{m}.\ac{nom} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
 `I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-elh}
 \bg. ih bibringu fona iacobes samin endi fona iuda dhen [\tbf{dher}] \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
@@ -1794,7 +1793,7 @@ In Figure \ref{fig:ohg-ext-wins-elh}, I give the syntactic structure of the extr
           \begin{forest} boom
             [\tsc{rel}P
                 [\tsc{rel}P
-                    [\phantom{x}\tit{dh}\phantom{x}, roof]
+                    [\phantom{xxx}, roof]
                 ]
                 [\tsc{nom}P,
                 tikz={
@@ -1860,7 +1859,7 @@ In Figure \ref{fig:ohg-ext-wins-lh}, I give the syntactic structure of the demon
               }
                   [\tsc{dem}]
                   [\tsc{rel}P
-                      [\phantom{x}\tit{dh}\phantom{x}, roof]
+                      [\phantom{xxx}, roof]
                   ]
               ]
               [\tsc{acc}P,
@@ -1960,7 +1959,7 @@ Consider the syntactic structure in \ref{ex:ohg-syntax-ext-wins} that represents
         }
             [\tsc{dem}]
             [\tsc{rel}P
-                [\phantom{x}\tit{dh}\phantom{x}, roof]
+                [\phantom{xxx}, roof]
             ]
         ]
         [\tsc{acc}P,
@@ -2049,7 +2048,7 @@ The feature \tsc{k}2 ends up in its position via several steps of Backtracking i
         }
             [\tsc{dem}]
             [\tsc{rel}P
-                [\phantom{x}\tit{dh}\phantom{x}, roof]
+                [\phantom{xxx}, roof]
             ]
         ]
         [\tsc{nom}P,
@@ -2128,7 +2127,7 @@ Then the feature \tsc{k}2 is merged, and the demonstrative is spelled out as \ti
         }
             [\tsc{dem}]
             [\tsc{rel}P
-                [\phantom{x}\tit{dh}\phantom{x}, roof]
+                [\phantom{xxx}, roof]
             ]
         ]
         [\tsc{acc}P,
@@ -2206,7 +2205,7 @@ In \ref{ex:ohg-nom-acc-lh}, the demonstrative \tit{dher} `\tsc{dem}.\ac{sg}.\ac{
 \ag. Thíz ist [er] \tbf{then} \tbf{sie} \tbf{zéllent}\\
 \ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \tsc{elh}.\ac{sg}.\ac{m}.\ac{nom} \ac{rp}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
 `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-elh}
-\bg. *Thíz ist ther [\tbf{then}] \tbf{sie} \tbf{zéllent}\\
+\bg. Thíz ist ther [\tbf{then}] \tbf{sie} \tbf{zéllent}\\
 \ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom} \ac{rp}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
 `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-lh}
 
@@ -2259,7 +2258,7 @@ In Figure \ref{fig:ohg-int-wins-elh}, I give the syntactic structure of the extr
                 fit to=tree]{};
                 }
                     [\tsc{k}2]
-                    [\tsc{acc}P,
+                    [\tsc{nom}P,
                     tikz={
                     \node[draw,circle,
                     dashed,
@@ -2317,7 +2316,7 @@ In Figure \ref{fig:ohg-int-wins-lh}, I give the syntactic structure of the demon
               }
                   [\tsc{dem}]
                   [\tsc{rel}P
-                      [\phantom{x}\tit{dh}\phantom{x}, roof]
+                      [\phantom{xxx}, roof]
                   ]
               ]
               [\tsc{nom}P,
@@ -2398,7 +2397,7 @@ For reasons of space I do not show the comparisons of the other situations in wh
 \section{Coming back to the light heads}\label{sec:coming-back}
 
 In this chapter I have suggested that headless relatives in Old High German can be derived from two different light-headed relatives: one headed by an extra light head and one headed by a demonstrative.
-In Section \ref{sec:light-ohg} I did not provide any motivation for why there should be two different sources for headless relative in the language.
+In Section \ref{sec:light-ohg} I did not provide any motivation for why there should be two different sources for headless relatives in the language.
 In this section I consider whether there is any support that suggests so.
 In Section \ref{sec:interpretation-ohg}, I consider headless relatives in which an extra light head is deleted have a different interpretation from headless relatives in which the relative pronoun is deleted. I do not find such support.
 In Section \ref{sec:ohg-larger-syntax}, I place the light heads and the relative pronoun into a larger syntactic structure. I put the different light heads in the syntactic structure in such a way that deletion always takes place under c-command. In that way, there seems to be a resemblance with what other researchers have suggested.
@@ -2559,7 +2558,7 @@ Consider the syntactic structure with the demonstrative and the relative pronoun
         }
             [\tsc{dem}]
             [\tsc{rel}P
-                [\phantom{x}\tit{dh}\phantom{x}, roof]
+                [\phantom{xxx}, roof]
             ]
         ]
         [\tsc{nom}P,
@@ -2865,7 +2864,7 @@ The features of the demonstrative (which is the second possible light head) are 
           }
               [\tsc{dem}]
               [\tsc{rel}P
-                  [\phantom{x}\tit{dh}\phantom{x}, roof]
+                  [\phantom{xxx}, roof]
               ]
           ]
           [\tsc{k}P,
@@ -2915,7 +2914,11 @@ The features of the demonstrative (which is the second possible light head) are 
   \label{fig:rel-lh-ohg-sum}
 \end{figure}
 
-A crucial characteristic of unrestricted languages such as Old High German is that there is a syncretism between the demonstrative and the relative pronoun. Therefore, the relative pronoun is formally contained in the demonstrative, and the relative pronoun can be deleted. This can lead to a more complex external case surfacing.
+A crucial characteristic of unrestricted languages such as Old High German is that there is a syncretism between the demonstrative and the relative pronoun. Therefore, the relative pronoun is formally contained in the demonstrative, and the relative pronoun can be deleted. This can lead to a more complex external case surfacing.\footnote{
+According to \citet{weiss2020}, relative pronouns starting with \tit{d-} developed from the demonstrative in the main clause. This could explain why relative pronouns in these languages are able to take the external case. Gothic, another unrestricted language discussed in this dissertation, also has \tsc{d-}relative pronouns.
+
+However, as shown in Chapter \ref{ch:typology}, Classial Greek is another unrestricted language, which has relative pronouns starting with \tit{wh}-. Additionally,as shown in  \ref{ch:without-case-competition}, relative pronouns in Modern Greek are able to (only) take the external case, and they are also \tsc{wh}-pronouns. This indicates that demonstratives developing in relative pronouns can not be the whole or the only explanation for them being able to take the external case, at least not for all languages.
+}
 
 The extra light head is crucial for allowing for a more internal case to surface, since for that it is required that the extra light head is structurally contained in the relative pronoun. Just as in Modern German and in Polish, this extra light head does not surface as head of a relative clause. Just as in Polish, the extra light head is not attested independently in the language.
 
