--- a/fenna-files/packages (1,5 spacing).sty
+++ b/fenna-files/packages (1,5 spacing).sty
@@ -15,9 +15,9 @@
 \usepackage{adjustbox}
 
 %%%SPACING/BREAKING%%%
-%\OnehalfSpacing*
+\OnehalfSpacing*
 \sloppy%%%overfull%%%
-%\setlength{\footnotesep}{.6\baselineskip}%spacing between footnotes
+\setlength{\footnotesep}{.6\baselineskip}%spacing between footnotes
 \usepackage{float}%%place tables exactly there with H
 \raggedbottom %%do not spread content over page
 %%%SPACING/BREAKING%%%
