--- a/introduction.tex
+++ b/introduction.tex
@@ -184,15 +184,18 @@ Chapter \ref{ch:without-case-competition} takes a small detour and discusses lan
 
 In Part \ref{part:deriving} I focus again on the different language types that involve case competition. The goal of this part is to provide an account that generates the attested language types and excludes the non-attested one. Additionally, the variation between the language types should follow from properties that can be independently observed in a language of a particular language type.
 
-In my account, headless relatives are derived from light-headed relatives. These light-headed relatives contain a light head and a relative pronoun. In a headless relative either the light head or the relative pronoun is deleted. The necessary requirement for deletion is that the deleted element is contained within the other element.
+In my account, headless relatives are derived from light-headed relatives. These light-headed relatives contain a light head and a relative pronoun. In a headless relative, either the light head or the relative pronoun is deleted. The necessary requirement for deletion is that the deleted element is contained within the other element.
 The difference between languages arises from languages having different lexical entries that spell out the features of the light head and the relative pronoun.
 The lexical entries are motivated by investigating the morphology of the languages. As a result, different lexical entries ultimately lead to different languages types.
+My dissertation is embedded in Nanosyntax. In this framework, all languages use the same building blocks and assemble them following the same algorithm. The only way in which languages differ is their postsyntactic lexicon, which interacts with the structure-building algorithm, leading to differences between languages. This way, the framework allows me to make the connection between the morphology of a language (i.e. its light head and relative pronoun) and its syntax (i.e. the grammaticality pattern in headless relatives).
 
 I describe the basic setup of my proposal in Chapter \ref{ch:the-basic-idea}, and I show how a different lexical entries ultimately generate the three attested language types and not the unattested one.
 In Chapter \ref{ch:deriving-onlyinternal}, I motivate the analysis for the internal-only type of language Modern German. I first identify the morphemes that Modern German light heads and relative pronouns consist of. Then I show which features each of the morphemes correspond to. I illustrate that the lexical entries in Modern German are such that they lead Modern German to be an internal-only type of language.
 In Chapter \ref{ch:deriving-matching} and \ref{ch:deriving-unrestricted} I do the same for the two other attested language types. I show that Polish has lexical entries that ultimately lead it to be a matching type of language, and that Old High German has lexical entries that ultimately lead it to be an unrestricted type of language.
 Toward the end of the chapter I briefly sketch what I assume to be the larger syntactic structure of a headless relative.
-Chapter \ref{ch:discussion} concludes.
+
+Chapter \ref{ch:previous-approaches} compares the proposal I put forward in the dissertation to three earlier proposals.
+Chapter \ref{ch:discussion} gives a summary of the dissertation.
 
 % \subsection{Case attraction}\label{sec:attraction}
 %
