--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -298,7 +298,7 @@ In this chapter so far I showed that the case scale \ac{nom} < \ac{acc} < \ac{da
 In this section, I show that this same case scale can be observed in morphology. First I show that syncretism only targets continuous regions on the case scale. Then I present a language that shows morphological containment that reflects the case scale.
 
 
-\section{Syncretism}
+\subsection{Syncretism}
 
 Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep[cf.][]{baerman2002}. In this section I discuss literature that shows that syncretism patterns among nominative, accusative and dative are not random. Instead, they pattern along the case scale \ac{nom} < \ac{acc} < \ac{dat}.
 
@@ -325,7 +325,7 @@ Crucially, to the best of my knowledge, there is no language in which the nomina
 In sum, case syncretism follows the ordering of the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
 
 
-\section{Morphological case containment}
+\subsection{Morphological case containment}
 
 This section shows a second way in which \ac{nom} < \ac{acc} < \ac{dat} is reflected in morphology: morphological case containment \citep[cf.][]{smith2019,zompi2017,caha2010}. In some languages, the form that is used for the accusative literally contains the form that is used for the nominative. In turn, the form for the dative contains the form for the accusative. I illustrate this phenomenon with examples from Khanty.
 
@@ -343,12 +343,12 @@ Khanty (or Ostyak) shows morphological case containment in some of its pronouns 
   \ac{nom}  & ma
             & luw
             & muŋ                                     \\
-  \ac{acc}  & ma:\tbf{-ne:m}
-            & luw\tbf{-e:l}
-            & muŋ\tbf{-e:w}                           \\
-  \ac{dat}  & ma:\tbf{-ne:m}\tbf{\tbf{-na}}
-            & luw\tbf{-e:l}\tbf{\tbf{-na}}
-            & muŋ\tbf{-e:w}\tbf{\tbf{-na}}       \\
+  \ac{acc}  & ma:-ne:m
+            & luw-e:l
+            & muŋ-e:w                          \\
+  \ac{dat}  & ma:-ne:m-na
+            & luw-e:l-na
+            & muŋ-e:w-na      \\
   \bottomrule
   \end{tabular}
   \label{tbl:cont-khanty}
@@ -364,7 +364,7 @@ In sum, some languages morphologically look like \ac{nom}-\ac{acc}-\ac{dat}. Thi
 
 
 
-\section{Summary}
+\subsection{Summary}
 
 Case competition in headless relatives adheres to the case scale in \ref{ex:case-scale-sum}.
 
