--- a/tables/containment-nom-acc-dat.tex
+++ b/tables/containment-nom-acc-dat.tex
@@ -6,7 +6,7 @@
           \cmidrule{2-2}
 \ac{nom}
           & luw                                     \\
-\ac{acc}  & luw\tbf{-e:l}                           \\
-\ac{dat}  & luw\tbf{-e:l}\tcol{DG}{\tbf{-na}}       \\
+\ac{acc}  & luw-e:l                          \\
+\ac{dat}  & luw-e:l-na       \\
 \bottomrule
 \end{tabular}
