--- a/thesis.tex
+++ b/thesis.tex
@@ -1,10 +1,10 @@
-\documentclass[hidelinks,a4paper,twoside,openright,11pt]{memoir}
+\documentclass[hidelinks,a4paper,twoside,openright,12pt]{memoir}
 
-% \includeonly{deriving-unrestricted}
+%\includeonly{languages-without-case-competition}
 
-\setlrmarginsandblock{3.5cm}{3.5cm}{*}
-\setulmarginsandblock{3.5cm}{*}{1}
-\checkandfixthelayout
+%\setlrmarginsandblock{3.5cm}{3.5cm}{*}
+%\setulmarginsandblock{3.5cm}{*}{1}
+%\checkandfixthelayout
 
 \usepackage{fenna-files/packages}
 \addbibresource{fenna-files/references.bib}
@@ -26,14 +26,18 @@
 
 \begin{titlingpage}
 
+\phantom{xx}
+
+\newpage
+
 \center
-\Large
+\large
 
 \phantom{xx}
 
-\vspace{6em}
+\vspace{3em}
 
-{\huge
+{\LARGE
 \tbf{Case competition in headless relatives}}\\
 
 \vspace{5em}
@@ -44,16 +48,28 @@ im Fachbereich Neuere Philologien\\
 der Johann Wolfgang Goethe-Universität\\
 zu Frankfurt am Main\\
 
-\vspace{7em}
+\vspace{5em}
 
 vorgelegt von\\
+
+\vspace{2em}
+
 Fenna Bergsma\\
-aus\\
-Boarnsterhim, Niederlande\\
+aus: Boarnsterhim, Niederlande\\
 
-\vspace{7em}
+\vspace{3em}
 
-2021
+2023\\
+
+\vspace{1em}
+
+1. Gutachterin: Prof. Dr. Katharina Hartmann\\
+2. Gutachter: Dr. Pavel Caha\\
+
+\vspace{1em}
+
+Tag der mündlichen Prüfung: 17.12.2021
+
 
 \end{titlingpage}
 
@@ -102,6 +118,7 @@ Boarnsterhim, Niederlande\\
 \include{deriving-internalonly}
 \include{deriving-matching}
 \include{deriving-unrestricted}
+\include{previous-approaches}
 
 \bookmarksetup{startatroot}
 \include{discussion}
